--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -10,17 +10,16 @@
       <Folder Include="AI\" />
       <Folder Include="Search\" />
       <Folder Include="Storage\" />
+      <Folder Include="Service\" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.13" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.13" />
-
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.13" />
-
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.16.0" />
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.13"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.16.0"/>
     </ItemGroup>
 
     <ItemGroup>
