--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -6,4 +6,15 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Application\Application.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="AuthUtils\" />
+    </ItemGroup>
+
 </Project>
