--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -6,6 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Folder Include="Controllers\" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.12" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.3" /> 
     </ItemGroup>
